--- a/bubble/requirements.txt
+++ b/bubble/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-opencv-python
-mediapipe
-pygame
-numpy
+streamlit==1.29.0
+opencv-python-headless==4.8.1.78
+mediapipe==0.10.8
+numpy==1.24.3
+pygame==2.5.2
